# openstack-client

./: .deploy.sh  .gitignore  .travis.yml  Cargo.toml  README.md
data/: actions.yaml  cli.yaml  commands.yaml  cool.yaml  resource_types.yaml  resources.yaml
scripts/: create_clap_cli.py  escape_quotes.py  get-methods-from-rustdoc.py  resource_sort.py  slicer.py
src/: client.rs  config.rs  enums.rs  error.rs  fmt_methods.rs  macros.rs  main.rs  objectstore.rs  openstack_connection.rs  structs.rs  token-response.json  traits.rs  utils.rs
tests/: cli_tests.rs  output.pest
tests/common/: mod.rs
