[package]
name = "openstack-client"
version = "0.1.0"
authors = ["thomas9911 <thomastimmer11@hotmail.com>"]

[dependencies]
serde = "*"
serde_derive = "*"
serde_json = "*"
serde_yaml = "*"
argparse = "*"
reqwest = "*"
secstr = {version = "*", features = ['serde']}
rpassword = "2.1.0"
chrono = { version = "*", features = ["serde"] }