[package]
name = "openstack-client"
version = "0.3.0"
authors = ["thomas9911 <thomastimmer11@hotmail.com>"]

[dependencies]
serde = "*"
serde_derive = "*"
serde_json = "*"
serde_yaml = "*"
reqwest = "*"
secstr = {version = "*", features = ['serde']}
rpassword = "2.1.0"
chrono = { version = "*", features = ["serde"] }
strum = "*"
strum_macros = "*"
clap = {version = "*", features = ["yaml"]}
structopt = "0.2"
heck = "*"
yaml-rust = "*"
# structopt-derive = "*"